--- a/css/style.css
+++ b/css/style.css
@@ -20,19 +20,70 @@
 }
 body {
   font-family: Lato-Regular;
+  color: #444;
 }
 
 html {
   font-size: 62.5%;
 }
 
+.navbar {
+  padding: 2.0875rem 0;
+}
+
+.navbar-light .navbar-nav li .active .nav-link {
+  color: #fff;
+  background-color: #1bbc9b;
+}
+.navbar-light .navbar-nav li:last-child .nav-link {
+  margin-right: 0;
+}
 .navbar-light .navbar-nav .nav-link {
   color: #444;
   font-size: 1.4rem;
+  padding: 0 1.2rem;
+  margin-right: 0.7rem;
 }
 .navbar-light .navbar-nav .nav-link:hover {
   color: #fff;
   background-color: #1bbc9b;
+}
+
+.home {
+  padding: 0.71rem 8.2rem 0;
+  color: #fff;
+  background-image: url("../images/images/banner.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.home h1 {
+  font-family: Lato-Light;
+  font-size: 5.5rem;
+  margin-bottom: 2.9rem;
+}
+.home h1 span {
+  font-family: Lato-Bold;
+}
+.home p {
+  font-family: Lato-Light;
+  font-size: 1.8rem;
+  margin: auto;
+  margin-bottom: 4.6rem;
+  max-width: 57.6rem;
+}
+.home button {
+  height: 3.7rem;
+  background: #1bbc9b;
+  color: #fff;
+  font-family: Lato-Bold;
+  font-size: 1.3rem;
+  margin-bottom: 4.2rem;
+  border: none;
+  padding: 0 1.3rem;
+  letter-spacing: 0.3rem;
+}
+.home a img {
+  margin-bottom: 1.8rem;
 }
 
 /*# sourceMappingURL=style.css.map */
